kubernetes-apps-helm-monitoring/flask-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-nodeport
  namespace: flask-ecommerce
  labels:
    app: flask-ecommerce
    tier: backend
spec:
  type: NodePort
  selector:
    app: flask-ecommerce
    tier: backend
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    nodePort: 30923
    protocol: TCP
